--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.13",
         "sass-loader": "^11.1.1",
-        "vue": "^2.6.12",
+        "vue": "^2.6.14",
         "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "bootstrap-vue": "^2.21.2",
         "vue-router": "^3.5.1",
         "vuetify": "^2.5.3",
         "vuex": "^3.6.2"
