--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dependencies": {
         "bootstrap-vue": "^2.21.2",
         "vue-router": "^3.5.1",
+        "vue-sweetalert2": "^4.3.1",
         "vuetify": "^2.5.3",
         "vuex": "^3.6.2"
     }
