--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "vue-router": "^3.5.1",
         "vue-sweetalert2": "^4.3.1",
         "vuetify": "^2.5.3",
-        "vuex": "^3.6.2"
+        "vuex": "^3.6.2",
+        "xlsx": "^0.17.0"
     }
 }
